feat: implement add command staging helper